🔧 CORS 설정 수정: 허용 출처를 하드코딩된 URL로 변경